microservice1/kubernetes/grpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: grpc
